# NeoGRAG

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  nginx.conf
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  config.py  main.py  schemas.py
backend/app/lib/: __init__.py  builder.py  entity_extractor.py  graphrag_builder.py  graphrag_visualizer.py  ontology_generator.py  updater.py
backend/app/routers/: __init__.py  auth.py  contact.py  feedback.py  files.py  knowledge_graph.py  process.py  search.py  upload.py
backend/app/services/: auth.py  file_catalog.py  file_processor.py  graphrag.py  hybrid_search.py  keyword_search.py  ned.py  semantic_search.py
backend/app/utils/: __init__.py  bm25_indexer.py  chroma_client.py  embeddings.py  llm_client.py  postgres_client.py  redis_client.py  text_utils.py
frontend/: .dockerignore  .gitignore  Dockerfile  firebase.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: AppClient.tsx  Home.css  Home.tsx  globals.css  landingInit.ts  layout.tsx  page.tsx
frontend/app/auth/: Auth.css  Auth.tsx  page.tsx
frontend/app/chat/: Chat.module.css  page.tsx
frontend/app/components/: AuthContext.tsx  StarRating.module.css  StarRating.tsx  ThemeContext.tsx  assets.ts
frontend/app/providers/: ollama.ts
frontend/app/tools/: search-tools.ts
frontend/app/types/: search.ts
frontend/app/upload/: PrivateRouter.tsx  Upload.css  Upload.tsx  api.ts  components.tsx  page.tsx
maintenance/: maintenance.html
(+10 files in other folders)
