[project]
name = "ctu-ai-context-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.0",
    "cffi>=2.0.0",
    "chromadb>=1.5.5",
    "cryptography>=48.0.0",
    "dnspython>=2.8.0",
    "docling>=2.82.0",
    "easyocr>=1.7.2",
    "email-validator>=2.3.0",
    "fastapi>=0.135.2",
    "igraph>=0.11.9",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "leidenalg>=0.10.2",
    "networkx>=3.5",
    "openai>=2.30.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.2.2",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.29",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
    "underthesea>=9.2.11",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
